testing/tests/ui/struct-expressions.stderr
error: expected end of struct expression after `..` was used
 --> <source attribute>:1:37
       "other: 24 } }}"
 --> tests/ui/struct-expressions.rs:7:14
  |
7 |     source = r#"{{ InnerCell { ..Default::default(), other: 24 } }}"#,
  |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: failed to parse template source
 --> <source attribute>:1:20
       "}"
  --> tests/ui/struct-expressions.rs:13:21
   |
13 | #[template(source = r#"some{{ InnerCell { }}"#, ext = "txt")]
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: expected expression after `:`
 --> <source attribute>:1:24
       "} }}"
  --> tests/ui/struct-expressions.rs:17:21
   |
17 | #[template(source = r#"some{{ InnerCell { foo: } }}"#, ext = "txt")]
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: expected expression after `..`
 --> <source attribute>:1:28
       ".. } }}"
  --> tests/ui/struct-expressions.rs:21:21
   |
21 | #[template(source = r#"some{{ InnerCell { foo: 32, .. } }}"#, ext = "txt")]
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: expected field name, `..` or `}`
 --> <source attribute>:1:19
       ". } }}"
  --> tests/ui/struct-expressions.rs:25:21
   |
25 | #[template(source = r#"some{{ InnerCell { . } }}"#, ext = "txt")]
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: missing field before `,`
 --> <source attribute>:1:17
       "{ , } }}"
  --> tests/ui/struct-expressions.rs:29:21
   |
29 | #[template(source = r#"some{{ InnerCell { , } }}"#, ext = "txt")]
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: expected end of struct expression after `..` was used
 --> <source attribute>:1:39
       ": 32 } }}"
  --> tests/ui/struct-expressions.rs:33:21
   |
33 | #[template(source = r#"some{{ InnerCell { ..Default::default(): 32 } }}"#, ext = "txt")]
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: expected end of struct expression after `..` was used
 --> <source attribute>:1:41
       "a: 12 } }}"
  --> tests/ui/struct-expressions.rs:37:21
   |
37 | #[template(source = r#"some{{ InnerCell { ..Default::default(), a: 12 } }}"#, ext = "txt")]
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
